Fixed project spacing error on first load

--- a/sarissa/src/components/Projects/index.scss
+++ b/sarissa/src/components/Projects/index.scss
@@ -107,6 +107,7 @@
             animation: fadeInRight 0.5s ease-out forwards;
             padding-bottom: 50px;
             text-decoration: none;
+            margin-left: 5%;
 
             .project-image {
                 width: 200px;
